* Fixed incorrect weight division for random uncertainties in spatial binning.

* Updates to product ingestions:
  - ECMWF GRIB: added general support for new masterTablesVersion numbers

1.20.2 2023-11-13
~~~~~~~~~~~~~~~~~

* Fill values of floating point types are now explicitly set to NaN when
  exporting to a netcdf or hdf5 file.

* Updates to product ingestions:
  - EARLINET: fixed issue where no backscatter/extinction data was ingested.

1.20.1 2023-10-12
~~~~~~~~~~~~~~~~~

* Updates to product ingestions:
  - IASI L1C: added missing angle variables
  - S5P PAL L2 AER_OT: added missing wavelength variable
  - S5P PAL L2 CHOCHO: fixed missing units for number density variables

1.20 2023-09-19
~~~~~~~~~~~~~~~

* Updates to product ingestions:
  - GEOMS FTIR: added support for C2H3NO5/PAN and C2H4, added support for
    template V3.
  - GEOMS TCCON: added support for template V6.
  - S5P L2 ALH: added support for revised surface_albedo variable and added
    surface_albedo_uncertainty.
  - S5P L2 O3: fixed custom V1 QA filter for NRTI products
  - S5P PAL L2: fixed memory issue when reading aerosol_optical_depth_validity
    of AER_OT product.

* Fixed missing documentation on weight factor handling in binning algorithm.

* Updated embedded expat library to version 2.5.0.

* Fixed issue where jpeg dll was missing from windows binary installer.

1.19 2023-07-24
~~~~~~~~~~~~~~~

* The python harp.import_product() function now allows HARP .pth files to be
  provided as input.

* Reintroduced propagation of *_uncertainty_random variables when performing
  spatial binning with area weighted averaging.

* Allowed regridding using a multi-dimensional source axis-variable as input.
  e.g. convert from an 'altitude {latitude,longitude,vertical}' grid to
  a fixed 'altitude {vertical}` grid.

* Added documentation for regridding/binning algorithms.

* Updates to product ingestions:
  - ACE-FTS: fix ingestion of ASCII formatted products