@@ -282,19 +282,19 @@
 <td><p>sea-ice concentration (as a fraction)</p></td>
 </tr>
 <tr class="row-odd"><td><p><strong>BrO_column_number_density</strong></p></td>
-<td><p>double</p></td>
+<td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[mol/m^2]</p></td>
 <td><p>vertical column of bromine monoxide</p></td>
 </tr>
 <tr class="row-even"><td><p><strong>BrO_column_number_density_uncertainty_random</strong></p></td>
-<td><p>double</p></td>
+<td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[mol/m^2]</p></td>
 <td><p>random error of vertical column density</p></td>
 </tr>
 <tr class="row-odd"><td><p><strong>BrO_column_number_density_uncertainty_systematic</strong></p></td>
-<td><p>double</p></td>
+<td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[mol/m^2]</p></td>
 <td><p>systematic error of vertical column density</p></td>
@@ -306,7 +306,7 @@
 <td><p>continuous quality descriptor, varying between 0 (no data) and 100 (full quality data)</p></td>
 </tr>
 <tr class="row-odd"><td><p><strong>BrO_column_number_density_amf</strong></p></td>
-<td><p>double</p></td>
+<td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[mol/m^2]</p></td>
 <td><p>geometric air mass factor</p></td>
@@ -485,7 +485,7 @@
 </tr>
 <tr class="row-even"><td><p><strong>BrO_column_number_density_uncertainty_systematic</strong></p></td>
 <td><p><em>path</em></p></td>
-<td><p><strong>/PRODUCT/brominemonoxide_total_vertical_column_precision</strong></p></td>
+<td><p><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/brominemonoxide_total_vertical_column_trueness</strong></p></td>
 </tr>
 <tr class="row-odd"><td><p><strong>BrO_column_number_density_validity</strong></p></td>
 <td><p><em>path</em></p></td>
